@@ -28,9 +28,9 @@ Plans for 0.2.0
   [W] Automate delegate listings
   [D] Rewrite config module
   [D] Add a text parser
-  [?] Redesign the undo/redo system
+  [W] Redesign the undo/redo system
   [W] Make fallback encodings be a list
-  [ ] Add default and fallbck encoding selection to preferences dialog
+  [ ] Add default and fallback encoding selection to preferences dialog
   [ ] Update Finnish translation
 
 
