@@ -28,63 +28,61 @@ except ImportError:
 import gtk
 
 
-FLAGS   = gtk.DIALOG_MODAL|gtk.DIALOG_DESTROY_WITH_PARENT
-TYPE    = gtk.MESSAGE_QUESTION
+FLAGS = gtk.DIALOG_MODAL|gtk.DIALOG_DESTROY_WITH_PARENT
+TYPE  = gtk.MESSAGE_QUESTION
 
 
 class OverwriteFileQuestionDialog(gtk.MessageDialog):
 
     """Dialog to ask whether to overwrite existing file or not."""
-    
+
     def __init__(self, parent, basename):
-        """
-        Initialize an OverwriteFileQuestionDialog object.
-        
-        basename: basename of the file being saved to
-        """
+
+        title  = _('A file named "%s" already exists') % basename
+        detail = _('Do you want to replace it with the one you are saving?')
+
         gtk.MessageDialog.__init__(
-            self, parent, FLAGS, TYPE, gtk.BUTTONS_NONE,
-            _('A file named "%s" already exists') % basename
+            self, parent, FLAGS, TYPE, gtk.BUTTONS_NONE, title
         )
-        
+
         self.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_NO )
         self.add_button(_('_Replace')   , gtk.RESPONSE_YES)
 
         self.set_default_response(gtk.RESPONSE_NO)
-        
-        self.format_secondary_text( \
-            _('Do you want to replace it with the one you are saving?') \
-        )
+
+        self.format_secondary_text(detail)
 
 
 class PasteFitQuestionDialog(gtk.MessageDialog):
 
-    """Dialog to ask whether to add new subtitles to fit clipboard contents."""
-    
+    """Dialog to ask whether to add new subtitles to fit clipboard data."""
+
     def __init__(self, parent, lacking):
 
+        title  = _('Not enough subtitles exist to fit clipboard contents')
+        detail = _('Add %d new subtitles?') % lacking
+
         gtk.MessageDialog.__init__(
-            self, parent, FLAGS, TYPE, gtk.BUTTONS_NONE,
-            _('Not enough subtitles exist to fit clipboard contents')
+            self, parent, FLAGS, TYPE, gtk.BUTTONS_NONE, title
         )
-        
+
         self.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_NO )
         self.add_button(gtk.STOCK_ADD   , gtk.RESPONSE_YES)
 
         self.set_default_response(gtk.RESPONSE_YES)
-        
-        self.format_secondary_text(_('Add %d new subtitles?') % lacking)
+
+        self.format_secondary_text(detail)
 
 
 class RevertQuestionDialog(gtk.MessageDialog):
 
     """Dialog to ask whether to revert changes or not."""
-    
+
     def __init__(self, parent, main_exists, tran_exists, main_changed,
                  tran_active, tran_changed, main_basename, tran_basename):
         """
         Initialize a RevertQuestionDialog object.
-        
+
         Raise ValueError if called with nothing to revert.
         """
         main_ok = not main_changed
@@ -99,9 +97,6 @@ class RevertQuestionDialog(gtk.MessageDialog):
         if not main_revertable and not tran_revertable:
             raise ValueError('There\'s nothing to revert!')
 
-        # Since revert reverts both main and translation documents, the
-        # user must be informed of which changes she will lose.
-
         if main_revertable and tran_revertable:
             title = _('Revert unsaved changes to both main document "%s" and translation document "%s"?') \
                     % (main_basename, tran_basename)
@@ -113,24 +108,24 @@ class RevertQuestionDialog(gtk.MessageDialog):
         elif main_revertable and tran_ok:
             title = _('Revert unsaved changes to main document "%s"?') \
                     % main_basename
-                    
+
         elif main_loseable and tran_revertable:
             title = _('Revert unsaved changes to translation document "%s" and lose changes main document "%s"?') \
                     % (tran_basename, main_basename)
-                    
+
         elif main_ok and tran_revertable:
             title = _('Revert unsaved changes to translation document "%s"?') \
                     % tran_basename
 
+        detail = _('If you revert, changes will be permanently lost.')
+
         gtk.MessageDialog.__init__(
             self, parent, FLAGS, TYPE, gtk.BUTTONS_NONE, title
         )
-        
+
         self.add_button(gtk.STOCK_CANCEL         , gtk.RESPONSE_NO )
         self.add_button(gtk.STOCK_REVERT_TO_SAVED, gtk.RESPONSE_YES)
 
         self.set_default_response(gtk.RESPONSE_NO)
-        
-        self.format_secondary_text( \
-            _('If you revert, changes will be permanently lost.') \
-        )
+
+        self.format_secondary_text(detail)
