@@ -36,32 +36,28 @@ BUTTONS = gtk.BUTTONS_NONE
 class CloseDocumentWarningDialog(gtk.MessageDialog):
 
     """Base class for document closing warning dialogs."""
-    
+
     def __init__(self, parent, title):
 
+        detail = _('If you don\'t save, changes will be permanently lost.')
+
         gtk.MessageDialog.__init__(self, parent, FLAGS, TYPE, BUTTONS, title)
-        
+
         self.add_button(_('Close _Without Saving'), gtk.RESPONSE_NO    )
         self.add_button(gtk.STOCK_CANCEL          , gtk.RESPONSE_CANCEL)
         self.add_button(gtk.STOCK_SAVE            , gtk.RESPONSE_YES   )
-        
+
         self.set_default_response(gtk.RESPONSE_YES)
-        
-        self.format_secondary_text( \
-            _('If you don\'t save, changes will be permanently lost.') \
-        )
+
+        self.format_secondary_text(detail)
 
 
 class CloseMainWarningDialog(CloseDocumentWarningDialog):
 
-    """Dialog to warn when closing main document with unsaved changes."""
-    
+    """Dialog to warn when closing main document."""
+
     def __init__(self, parent, basename):
-        """
-        Initialize a CloseMainWarningDialog object.
-        
-        basename: basename of the document being closed
-        """
+
         title = _('Save changes to main document "%s" before closing?') \
                 % basename
 
@@ -70,69 +66,56 @@ class CloseMainWarningDialog(CloseDocumentWarningDialog):
 
 class CloseTranslationWarningDialog(CloseDocumentWarningDialog):
 
-    """Dialog to warn when closing translation with unsaved changes."""
-    
+    """Dialog to warn when closing translation document."""
+
     def __init__(self, parent, basename):
-        """
-        Initialize a CloseTranslationWarningDialog object.
-        
-        basename: basename of the document being closed
-        """
+
         title = _('Save changes to translation document "%s" before closing?')\
                 % basename
 
         CloseDocumentWarningDialog.__init__(self, parent, title)
 
 
-class ImportTranslationWarningDialog(gtk.MessageDialog):
+class OpenTranslationWarningDialog(gtk.MessageDialog):
 
-    """Dialog to warn when importing a translation over a changed one."""
-    
+    """Dialog to warn when opening a translation file."""
+
     def __init__(self, parent, basename):
-        """
-        Initialize an ImportTranslationWarningDialog object.
-        
-        basename: basename of the file being opened
-        """
-        gtk.MessageDialog.__init__(
-            self, parent, FLAGS, TYPE, BUTTONS,
-            _('Save changes to translation document "%s" before importing a new one?') \
-            % basename
-        )
-        
+
+        title  = _('Save changes to translation document "%s" before opening a new one?') \
+                 % basename
+        detail = _('If you don\'t save, changes will be permanently lost.')
+
+        gtk.MessageDialog.__init__(self, parent, FLAGS, TYPE, BUTTONS, title)
+
         self.add_button(_('Import _Without Saving'), gtk.RESPONSE_NO    )
         self.add_button(gtk.STOCK_CANCEL           , gtk.RESPONSE_CANCEL)
         self.add_button(gtk.STOCK_SAVE             , gtk.RESPONSE_YES   )
-        
+
         self.set_default_response(gtk.RESPONSE_YES)
-        
-        self.format_secondary_text( \
-            _('If you don\'t save, changes will be permanently lost.') \
-        )
+
+        self.format_secondary_text(detail)
 
 
 class OpenBigFileWarningDialog(gtk.MessageDialog):
 
     """Dialog to warn when opening a file over 1 MB."""
-    
+
     def __init__(self, parent, basename, size):
         """
         Initialize an OpenBigFileWarningDialog object.
-        
-        basename: basename of the file being opened
-        size    : file's size in megabytes
+
+        size is in megabytes.
         """
-        gtk.MessageDialog.__init__(
-            self, parent, FLAGS, TYPE, BUTTONS,
-            _('Open abnormally large file "%s"?') % basename
-        )
-        
+        title  = _('Open abnormally large file "%s"?') % basename
+        detail = _('Size of the file is %.1f MB, which is abnormally large for a text-based subtitle file. Please, check that you are not trying to open a binary file.') \
+                 % size
+
+        gtk.MessageDialog.__init__(self, parent, FLAGS, TYPE, BUTTONS, title)
+
         self.add_button(gtk.STOCK_CANCEL, gtk.RESPONSE_NO )
         self.add_button(gtk.STOCK_OPEN  , gtk.RESPONSE_YES)
-        
+
         self.set_default_response(gtk.RESPONSE_NO)
-        
-        self.format_secondary_text( \
-            _('Size of the file is %.1f MB, which is abnormally large for a text-based subtitle file. Please, check that you are not trying to open a binary file.') \
-            % size \
-        )
+
+        self.format_secondary_text(detail)
